# beancount-mcp

./: .env.example  README.md  pyproject.toml
src/: _beancount.py  config.py  main.py  util.py
